src/objects/DocuSignCredentialsSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IntegratorKey__c</fullName>
        <description>This field is used to store the integration key of docusign.</description>
        <label>IntegratorKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>This field is used to store the DocuSign password</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <description>This field is used to store the accountId value of the docusign</description>
        <label>account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>end_Point__c</fullName>
        <description>This field is used to store the end point URL of the docusign.</description>
        <label>end Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Credentials Setting</label>
</CustomObject>